fix: mixin flex gap for safari

--- a/src/scss/_backing.scss
+++ b/src/scss/_backing.scss
@@ -95,7 +95,8 @@
 
   &__social-bar {
     margin: 7px 0 0 0;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min-content, 1px));
     align-items: center;
     gap: 13px;
   }
