--- a/src/scss/_trusted.scss
+++ b/src/scss/_trusted.scss
@@ -39,14 +39,13 @@
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  //gap: 35px 69px;
-  @include flex-gap(35px, 69px);
-  margin-top: 35px;
+  gap: 35px 69px;
+  @include gap-flex-safari(35px, 69px, 48px);
 
   @media (max-width: $breakpoint768) {
-    // gap: 30px;
-    @include flex-gap(30px, 30px);
-    margin-top: 35px;
+    gap: 30px;
+    @include gap-flex-safari(30px, 30px, 35px);
+
   }
 
   // __link
